# compile-registry

./: .travis.yml  LICENSE  README.md  compile-registry.cabal  stack.yaml
app/: Main.hs
src/CR/: Client.hs  InterfaceTypes.hs  Server.hs  Types.hs
src/CR/Util/: Aeson.hs
